Added jar packaging to module pom Removed extra dependencies and plugins from pom